# read_the_docs

./: README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
foxes_docs/source/: conf.py
src/: utils_mix.py
